PYIC-5082: Return individual item for each CI
The decision was made that we will return a CI item in the cimit VC for
each CI, deduped on CI code AND document ID. This updates the model and
the vc generating code to respect that.